add_library(lp OBJECT
  binary_heap_priority_queue_instances.cpp
  binary_heap_upair_queue_instances.cpp
  core_solver_pretty_printer_instances.cpp
  indexed_vector_instances.cpp
  lar_core_solver_instances.cpp
  lar_solver_instances.cpp
  lp_core_solver_base_instances.cpp
  lp_dual_core_solver_instances.cpp
  lp_dual_simplex_instances.cpp
  lp_primal_core_solver_instances.cpp
  lp_primal_simplex_instances.cpp
  lp_settings_instances.cpp
  lp_solver_instances.cpp
  lu_instances.cpp
  permutation_matrix_instances.cpp
  row_eta_matrix_instances.cpp
  sparse_matrix_instances.cpp
  square_dense_submatrix_instances.cpp
  static_matrix_instances.cpp
  scaler_instances.cpp
  eta_matrix_instances.cpp
  lar_constraints.cpp
  dense_matrix_instances.cpp matrix_instances.cpp
  )
