add_library(util OBJECT object_ref.cpp name.cpp name_set.cpp fresh_name.cpp
  escaped.cpp bit_tricks.cpp ascii.cpp
  path.cpp lbool.cpp bitap_fuzzy_search.cpp
  init_module.cpp list_fn.cpp file_lock.cpp timeit.cpp timer.cpp
  parser_exception.cpp name_generator.cpp kvmap.cpp map_foreach.cpp
  options.cpp format.cpp option_declarations.cpp)
