add_executable(lean_scanner scanner.cpp ${LEAN_OBJS})
target_link_libraries(lean_scanner ${EXTRA_LIBS})
add_exec_test(lean_scanner "lean_scanner")
# add_executable(lean_parser parser.cpp)
# target_link_libraries(lean_parser ${ALL_LIBS})
# add_exec_test(lean_parser "lean_parser")
# # add_executable(lean_pp pp.cpp)
# target_link_libraries(lean_pp ${ALL_LIBS})
# add_exec_test(lean_pp "lean_pp")
